# ferry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  TOOL_MAPPING.md  ferry-sidecar.spec  requirements-build.txt  sidecar.py
agent-runtime/: .gitignore  package-lock.json  package.json
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: agent.rs  credential.rs  lib.rs  main.rs  menu.rs  operation_commands.rs  operation_input.rs  operation_request.rs  operation_validation.rs  reveal.rs  sidecar.rs  sidecar_policy.rs  terminal.rs
app/src-tauri/src/contracts/: agents.rs  engine_methods.rs  errors.rs  events.rs  ipc.rs  mod.rs  operations.rs  runtime_methods.rs  session_ref.rs
app/src-tauri/src/desktop/: mod.rs  reveal.rs  terminal.rs  window.rs
app/src-tauri/src/desktop/platform/: mod.rs  windows.rs
app/src-tauri/src/engine/: mod.rs  policy.rs  tests.rs
app/src-tauri/src/operations/: input.rs  mod.rs  request.rs  validation.rs
app/src-tauri/src/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
app/src-tauri/src/process/: client.rs  command.rs  error.rs  framing.rs  mod.rs  supervisor.rs
app/src-tauri/src/runtime/: approval.rs  gateway.rs  mod.rs  tool_routes.rs
contracts/: agents.json  engine-methods.json  errors.json  events.json  ipc.json  operations.json  runtime-methods.json  session-ref.json
docs/: architecture.md  refactoring-roadmap.md
engine/: api.py  app.py  bootstrap.py  codex_native.py  composition.py  context.py  convert.py  edit.py  edit_backend.py  errors.py  events.py  model.py  opencode_api.py  reader_claude.py  reader_codex.py  resources.py  rw_opencode.py  writer_claude.py  writer_codex.py
ferry-runtime/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
harness/: probe.py
scripts/: build-sidecar.py  build-sidecar.sh  build.py  check-canonical-session.py  check-canonical-tool-result.py  check-frontend-boundaries.mjs  check-no-agent-versioning.py  check-no-legacy-runtime.py  extract-agent-format.py  generate-contracts.py  release.py
tests/: conftest.py  test_adapter_building.py  test_adapter_contract.py  test_agent_mutation_safety.py  test_agent_tools.py  test_authoring.py  test_canonical_tool_model.py  (+51 more)
(+541 files in other folders)
