[package]
name = "ferry"
version = "0.3.0"
edition = "2021"

[lib]
name = "ferry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
  "std", "NSWindow", "NSView", "NSButton", "NSControl", "NSResponder",
] }
