[package]
name = "ferry"
version = "0.3.0"
edition = "2021"

[lib]
name = "ferry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# GUI 启动(Finder/Dock)只继承 launchd 最小 PATH,启动时从登录 shell 恢复完整 PATH,
# 否则引擎子进程探测/执行 claude、codex、opencode 等 CLI 会找不到命令。Windows 上为 no-op。
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
  "std", "NSWindow", "NSView", "NSButton", "NSControl", "NSResponder",
] }
