[package]
name = "ferry"
version = "0.4.0"
edition = "2021"

[lib]
name = "ferry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
# 记住用户手动调整过的窗口大小/位置,首启才用 tauri.conf.json 里的默认尺寸
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# GUI 启动(Finder/Dock)只继承 launchd 最小 PATH,启动时从登录 shell 恢复完整 PATH,
# 否则引擎子进程探测/执行 claude、codex、opencode 等 CLI 会找不到命令。Windows 上为 no-op。
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "macos")'.dependencies]
# 窗口层 NSVisualEffectView 毛玻璃(配合 tauri.macos.conf.json 的 transparent + macOSPrivateApi)
window-vibrancy = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "std", "NSWindow", "NSView", "NSButton", "NSControl", "NSResponder",
] }
